[package]
name = "brainfuck-exe"
authors = ["Tom-the-Bomb"]
description = "A brainfuck interpreter implemented in rust"
repository = "https://github.com/Tom-the-Bomb/brainfuck-rs"
documentation = "https://docs.rs/brainfuck-exe"
license = "MIT"
readme = "README.md"
version = "0.2.4"
edition = "2021"
keywords = [
    "cli",
    "parser",
    "programming-language",
    "language",
    "interpreter",
]
categories = [
    "compilers",
    "command-line-interface",
    "parser-implementations",
]

[[bin]]
name = "brainfuck"
required-features = ["cli"]

[dependencies]
clap = { version = "4.1", features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["dep:clap"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "brainfuck_bench"
harness = false